--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,12 @@
 ---
 sudo: required
 language: python
+python:
+  - "2.7"
+  - "3.3"
+  - "3.4"
+  - "3.5"
+  - "3.6"
 dist: xenial
 services:
   - docker
