explicitly defined scenario run and enabled check mode for lib

--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -22,3 +22,19 @@ verifier:
   name: testinfra
   lint:
     name: flake8
+
+
+scenario:
+  test_sequence:
+    - lint
+    - cleanup
+    - syntax
+    - create
+    - prepare
+    - converge
+    - idempotence
+    - check
+    - side_effect
+    - verify
+    - cleanup
+    - destroy
